generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
}

model Admin {
  id                Int       @id @default(autoincrement()) @map("admin_id")
  email             String    @unique
  password          String
  deletedUsers      User[]    @relation("DeletedUser") // Pluralized
  cancelledBookings Booking[] @relation("CancelledBookings")
}

model User {
  id               Int       @id @default(autoincrement()) @map("user_id")
  email            String    @unique
  password         String
  firstName        String    @map("first_name")
  lastName         String    @map("last_name")
  bookings         Booking[]
  reviews          Review[]
  deletedByAdminId Int?      @map("deleted_by_admin_id")
  deletedByAdmin   Admin?    @relation("DeletedUser", fields: [deletedByAdminId], references: [id])
}

model Booking {
  id                 Int       @id @default(autoincrement()) @map("booking_id")
  date               DateTime?
  totalPrice         Float?    @map("total_price")
  
  // Removed redundant destination and flightNumber fields

  userId             Int       @map("user_id") // Added map for consistency
  user               User      @relation(fields: [userId], references: [id], onDelete: Cascade)

  flightId           Int       @map("flight_id") // Added map for consistency
  flight             Flight    @relation(fields: [flightId], references: [id])

  cancelledByAdminId Int?      @map("cancelled_by_admin_id")
  cancelledByAdmin   Admin?    @relation("CancelledBookings", fields: [cancelledByAdminId], references: [id])
}

model Review {
  id            Int         @id @default(autoincrement()) @map("review_id")
  rating        Float
  comment       String
  createdAt     DateTime    @default(now()) @map("created_at")

  userId        Int         @map("user_id")
  user          User        @relation(fields: [userId], references: [id], onDelete: Cascade)

  destinationId Int         @map("destination_id")
  destination   Destination @relation(fields: [destinationId], references: [id], onDelete: Cascade)
}

model Flight {
  id              Int         @id @default(autoincrement()) @map("flight_id")
  flightNumber    String      @map("flight_no")
  price           Float
  departure       String

  // Added fields for flight search functionality
  airlineName     String?     @map("airline_name")
  departureCity   String?     @map("departure_city")
  arrivalCity     String?     @map("arrival_city")
  departureTime   DateTime?   @map("departure_time")
  arrivalTime     DateTime?   @map("arrival_time")
  durationMinutes Int?        @map("duration_minutes")

  destinationId   Int         @map("destination_id")
  destination     Destination @relation(fields: [destinationId], references: [id])

  bookings        Booking[]
}

model Destination {
  id          Int        @id @default(autoincrement()) @map("dest_id")
  name        String
  country     String
  imageUrl    String?    @map("image_url")
  description String?
  cost        Float?
  rating      Float?

  flights   Flight[]
  topPlaces TopPlace[]
  reviews   Review[]
}

model TopPlace {
  id            Int         @id @default(autoincrement())
  photoNumber   Int         @map("photo_number")
  imageUrl      String      @map("image_url")
  caption       String

  destinationId Int         @map("destination_id") // Added map for consistency
  destination   Destination @relation(fields: [destinationId], references: [id], onDelete: Cascade)
}