@startuml
skinparam classAttributeIconSize 0

class Admin <<C1>> {
  +int admin_id
  +String email
  +String password
  --
  +login()
  +logout()
  +getAllUsers()
  +deleteUser(userId)
  +getAllBookings()
  +cancelBooking(bookingId)
}

class User <<C2>> {
  +int user_id
  +String email
  +String password
  +String first_name
  +String last_name
  --
  +register()
  +login()
  +logout()
}

class Booking <<C3>> {
  +int booking_id
  +DateTime date
  +float total_price
  --
  +createBooking(flightId, passengers, payment)
  +getMyBookings()
  +getBookingDetails(bookingId)
  +updateBookingStatus(bookingId, status)
}

class Review <<C4>> {
  +int review_id
  +float rating
  +String comment
  +DateTime created_at
  --
  +addReview(comment, rating, destinationId)
  +getReviews()
  +getReviewsByDestination(destinationId)
}

class Flight <<C5>> {
  +int flight_id
  +String flight_no
  +float price
  +String departure
  +String airline_name
  +String departure_city
  +String arrival_city
  +DateTime departure_time
  +DateTime arrival_time
  +int duration_minutes
  --
  +searchFlights(departureCity, arrivalCity, date)
  +getFlightDetails(flightId)
  +renderFlights(flights)
}

class Destination <<C6>> {
  +int dest_id
  +String name
  +String country
  +String image_url
  +String description
  +float cost
  +float rating
  --
  +getDestinations()
  +getDestinationDetails(destinationId)
  +renderDestinations(country)
}

class TopPlace <<C7>> {
  +int id
  +int photo_number
  +String image_url
  +String caption
  --
  +getTopPlaces(destinationId)
}

Admin "1" ..> "0..*" User : deletes >
Admin "1" ..> "0..*" Booking : cancels >

User "1" --> "0..*" Booking : makes >
User "1" --> "0..*" Review : writes >

Booking "0..*" --> "1" Flight : for >

Flight "0..*" --> "1" Destination : flies to >

Review "0..*" --> "1" Destination : for >

Destination "1" *--> "1..*" TopPlace : has >

@enduml
